# robotnik_email

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
config/: email_sender_config.yaml  smtp_config.yaml
launch/: email.launch  email_sender.launch
src/robotnik_email/: email_sender.py  email_sender_node.py  smtp_manager.py  smtp_manager_node.py
srv/: SendEmail.srv
