<?xml version="1.0"?>
<package format="2">
  <name>robotnik_email</name>
  <version>0.1.0</version>
  <description>The robotnik_email package, based on RComponent structure. Email server to send messages through ROS</description>

  <maintainer email="rvasquez@robotnik.es">Robert Vasquez Zavaleta</maintainer>
  <maintainer email="jmnavarrete@robotnik.es">Juanma</maintainer>

  <author email="rvasquez@robotnik.es">Robert Vasquez Zavaleta</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>
  <!--build_depend>message_generation</build_depend-->

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>
  <!--exec_depend>message_runtime</exec_depend-->

  <export>

  </export>
</package>
